assets/css/store/_checkout.scss
// Checkout general CSS styling

//
// 1. Checkout ASOS style
//
.checkout-page.checkout-asos {
  background-color: $gray-50;

  & .asos-content {
    display: flex;
    flex-direction: column;

    & .asos-left {
      //padding-top: 1rem;

      @include media-breakpoint-up(lg) {
        padding-top: 0;
      }
    }
  }

  & .container {
    max-width: 600px;

    @include media-breakpoint-up(lg) {
      max-width: 960px;
    }

  }
  //& .card .block-
  & .card .card-body .border.rounded {
    border: none !important;
    border-radius: 0 !important;
  }
  & .checkout-shipping-item,
  & .checkout-payment-item {
    padding-right: 0;
    padding-left: 0;
  }
}

//
// 2. Checkout SHOPIFY style
//

$checkout-shopi-container-width:        600px !default;
$checkout-shopi-left-bg:                $white !default;
$checkout-shopi-right-bg:               $gray-50 !default;
$checkout-shopi-body-padding-x:         15px !default;
$checkout-shopi-body-width:             $checkout-shopi-container-width !default;

$checkout-shopi-collapse-header-bg:             $gray-50 !default;
$checkout-shopi-collapse-header-border-width:   $border-width !default;
$checkout-shopi-collapse-header-border-color:   $gray-300 !default;
$checkout-shopi-collapse-body-bg:               $checkout-shopi-right-bg !default;

.checkout-page.checkout-shopi {
  & .container {
    max-width: $checkout-shopi-container-width;
  }

  // Corrections
  &:not(.thank-you-page) .card {
    box-shadow: none;

    & .card-body {
      padding: 0;
    }
  }
  // End corrections

  & .shopi-content {
    display: flex;
    flex-direction: column;

    & .shopi-left {
      display: flex;
      width: 100%;
      justify-content: center;
      background-color: $checkout-shopi-left-bg;
      border-right: none;
      padding-top: 1rem;
      padding-right: 0;

      & .shopi-left-body {
        width: 100%;
        max-width: $checkout-shopi-body-width;
        padding-right: 10px;
        padding-left: 10px;
        margin-left: auto;
        margin-right: auto;
      }
    }

    & .shopi-right {
      display: none;

      & .shopi-right-body {
        width: 100%;
        max-width: $checkout-shopi-body-width;
        padding-right: $checkout-shopi-body-padding-x;
        padding-left: $checkout-shopi-body-padding-x;
        margin-right: auto;
        margin-left: auto;
      }
    }

    @include media-breakpoint-up(lg) {
      flex-direction: row;

      & .shopi-left {
        width: 54.64%;
        min-height: 100vh;
        justify-content: flex-end;
        border-right: $border-width solid $border-color;
        padding-right: 1.5rem;
        padding-left: 1.5rem;

        & .shopi-left-body {
          max-width: 602px;
          margin-right: 0;
          padding-right: $checkout-shopi-body-padding-x;
          padding-left: $checkout-shopi-body-padding-x;
        }
      }
      & .shopi-right {
        display: flex;
        width: 45.36%;
        min-height: 100vh;
        justify-content: flex-start;
        background-color: $checkout-shopi-right-bg;

        & .shopi-right-body {
          max-width: 448px;
          margin-left: 0;
        }
      }
    }
  }
}

.cart-collapse {
  display: block;

  @include media-breakpoint-up(lg) {
    display: none;
  }

  & .cart-collapse-header {
    background-color: $checkout-shopi-collapse-header-bg;
    border-top: $checkout-shopi-collapse-header-border-width solid $checkout-shopi-collapse-header-border-color;
    border-bottom: $checkout-shopi-collapse-header-border-width solid $checkout-shopi-collapse-header-border-color;
  }
  & .cart-collapse-body {
    background-color: $checkout-shopi-collapse-body-bg;

    &.show {
      border-bottom: $checkout-shopi-collapse-header-border-width solid $checkout-shopi-collapse-header-border-color;
    }
  }
}

.checkout-page.checkout-asos .cart-collapse {
  & .cart-collapse-body {
    background-color: $checkout-shopi-collapse-header-bg;
  }
}


.minicard--title {
  font-weight: $font-weight-bold;
}
.minicard--address {
  font-size: $font-size-base-secondary;
}



///////////////////////////////////
// Summary

.checkout-summary {
  border: $border-width solid $border-color;
  @include border-radius($border-radius);
  font-size: .88rem;
  line-height: 1.125rem;
  color: $gray-650;

  & .checkout-summary-item {
    padding: .75rem .75rem;
    border-bottom: $border-width solid $border-color;

    &:first-of-type {
      border-top-right-radius: $border-radius;
      border-top-left-radius: $border-radius;
    }
    &:last-of-type {
      border-bottom-right-radius: $border-radius;
      border-bottom-left-radius: $border-radius;
      border-bottom: none;
    }
  }

  & .checkout-summary-item-title {
  }
  & .checkout-summary-item-description {
    color: $yiq-text-dark;
  }
}

///////////////////////////////////
// Shipping and Payment methods

.checkout-method-selection {
  border: $border-width solid $border-color;
  @include border-radius($border-radius);
  margin-top: map_get($spacers, 3);
}

.checkout-shipping-item,
.checkout-payment-item {
  padding: .75rem .75rem;
  //padding: .5rem 1rem;
  border-bottom: $border-width solid $border-color;

  @include media-breakpoint-up(lg) {
    padding: 1rem 1rem;
  }

  &:first-of-type {
    border-top-right-radius: $border-radius;
    border-top-left-radius: $border-radius;
  }
  &:last-of-type {
    //padding-bottom: 0;
    //margin-bottom: 0;
    border-bottom-right-radius: $border-radius;
    border-bottom-left-radius: $border-radius;
    border-bottom: none;
  }
}

@include media-breakpoint-up(sm) {
  .checkout-shipping-item,
  .checkout-payment-item {
    padding: 1rem 1.25rem;
  }
}

.checkout-shipping-item-title,
.checkout-payment-item-title {
  font-size: $font-size-base;
  font-weight: $font-weight-bold;
  color: $yiq-text-dark;
}
.checkout-shipping-item-description,
.checkout-payment-item-description {
  color: $gray-700;
  font-size: $font-size-base-secondary;
}


.checkout-shopi {
  & .order-summary {
    margin-top: 1rem;
  }
  & .shipping-address,
  & .customer-basic-details,
  & .shipping-method,
  & .shipping-deliveryDate,
  & .payment-method,
  & .shipping-method,
  & .billing-address,
  & .user-registration {
    margin-top: 30px;
  }
  &.thank-you-page {
    & .shipping-address,
    & .customer-basic-details,
    & .shipping-method,
    & .shipping-deliveryDate,
    & .payment-method,
    & .shipping-method,
    & .billing-address,
    & .user-registration {
      margin-top: 20px;
    }
  }
}


.checkout-asos {
  & .order-summary {
    margin-top: 1rem;
  }
  & .shipping-address,
  & .customer-basic-details,
  & .shipping-method,
  & .shipping-deliveryDate,
  & .payment-method,
  & .shipping-method,
  & .billing-address,
  & .user-registration {
    margin-top: 20px;
  }
}

///////////////////////////////////
// Corrections

.checkout-page.checkout-asos .checkout-summary {
  & .checkout-summary-item {
    padding: .75rem 0;
  }
}

h1, h2, h3, h4, h5, h6 {
  &.checkout-block-title {
    font-weight: $font-weight-bold;
    margin-bottom: 0;
    text-transform: uppercase;
    letter-spacing: $letter-spacing;
  }
}

.checkout-recipient-current,
.checkout-sender-current {
  color: $label-color;
  background-color: $secondary;
  border: $border-width solid $border-color;
  border-radius: $border-radius;
  padding: .75rem;
}

.checkout-recipient-item,
.checkout-sender-item {
  padding-bottom: 1.25rem;
  margin-bottom: 1.25rem;
  border-bottom: $border-width solid $gray-300;
  color: $label-color;

  &:last-of-type {
    padding-bottom: 0;
    margin-bottom: 0;
    border-bottom: none;
  }
}
.text-link-checkout {
  display: inline-block;
  font-size: $font-size-base-secondary;

  &:not(:last-of-type) {
    margin-right: map_get($spacers, 3);
    margin-bottom: map_get($spacers, 2);
  }
}


.btn-goto {
  text-transform: initial;
  letter-spacing: 0;
}

